# MCP-server

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  example.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
examples/: example_client.py
scripts/: run_server.py
src/: __init__.py  config.py  server.py
tests/: __init__.py  test_server.py
